add/change files

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -11,13 +11,13 @@ NAME = libftprintf.a
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	ar r $(NAME) $(OBJS)
+	@ar r $(NAME) $(OBJS)
 
 clean:
-	rm -f $(OBJS)
+	@rm -f $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
 
 re: fclean all
 
